<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmedazab.inventoryapp_v2.EditorActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="135dp" />

        <TextView
            android:id="@+id/tv_productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/product_name"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_ProductName"
            app:layout_constraintEnd_toStartOf="@+id/constraint"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_ProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text|textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/constraint"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ProductQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/quantity"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_ProductQuantity"
            app:layout_constraintEnd_toStartOf="@+id/constraint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_ProductQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/constraint"
            app:layout_constraintTop_toBottomOf="@+id/et_ProductName" />

        <TextView
            android:id="@+id/tv_ProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/price"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_ProductPrice"
            app:layout_constraintEnd_toStartOf="@+id/constraint"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_ProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraint"
            app:layout_constraintTop_toBottomOf="@+id/et_ProductQuantity" />

        <TextView
            android:id="@+id/tv_SupplierName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/supplier_name"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_SupplierName"
            app:layout_constraintEnd_toStartOf="@+id/constraint"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="206dp" />

        <EditText
            android:id="@+id/et_SupplierName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraint"
            app:layout_constraintTop_toBottomOf="@+id/et_ProductPrice" />

        <TextView
            android:id="@+id/tv_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/supplier_email"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_SupplierEmail"
            app:layout_constraintEnd_toStartOf="@+id/constraint"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_SupplierEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textWebEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraint"
            app:layout_constraintTop_toBottomOf="@+id/et_SupplierName" />

        <TextView
            android:id="@+id/tv_SupplierNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/supplier_phone"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_SupplierNumber"
            app:layout_constraintEnd_toStartOf="@+id/constraint"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_SupplierNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraint"
            app:layout_constraintTop_toBottomOf="@+id/et_SupplierEmail" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
